# LSysGen

./: .gitignore  CMakeLists.txt  Derivator_8h_source.html  Drawer2D.cpp  Drawer2D.h  Drawer2D_8h_source.html  ErrorHandler.cpp  ErrorHandler.h  ErrorHandler_8h_source.html  LSysDExpressionEvaluator.cpp  LSysDExpressionEvaluator.h  LSysDExpressionEvaluator_8h_source.html  LSysDLexer.g4  LSysDLexer_8h_source.html  LSysDParser.g4  LSysDParserBaseVisitor_8h_source.html  LSysDParserVisitor_8h_source.html  LSysDParser_8h_source.html  LSysDVisitor.cpp  LSysDVisitor.h  LSysDVisitor_8h_source.html  LSystem.cpp  LSystem.h  LSystem_8h_source.html  Module_8h_source.html  NodeContent.cpp  NodeContent.h  NodeContent_8h_source.html  ParseTreeNode.cpp  ParseTreeNode.h  ParseTreeNode_8h_source.html  README.md  Rule.cpp  Rule.h  Rule_8h_source.html  Settings_8h_source.html  Table.cpp  Table.h  Table_8h_source.html  TreeNode_8h_source.html  (+767 more)
.github/workflows/: docs.yml
antlr4-generated/: LSysDLexer.cpp  LSysDLexer.h  LSysDLexer.interp  LSysDLexer.tokens  LSysDParser.cpp  LSysDParser.h  LSysDParser.interp  LSysDParser.tokens  LSysDParserBaseListener.h  LSysDParserBaseVisitor.h  LSysDParserVisitor.cpp  LSysDParserVisitor.h
antlr4-runtime/: LSysDParser.cpp  LSysDParser.h  LSysDParser.interp  LSysDParserBaseListener.cpp  LSysDParserBaseVisitor.cpp  LSysDParserBaseVisitor.h  LSysDParserListener.cpp  LSysDParserListener.h  LSysDParserVisitor.h
antlr4cpp_generated_src/: CMakeLists.txt
antlr4cpp_generated_src/LSysDLexer/: LSysDLexer.cpp  LSysDLexer.h  LSysDLexer.interp  LSysDLexer.tokens
antlr4cpp_generated_src/LSysDParser/: LSysDParser.cpp  LSysDParser.h  LSysDParser.interp  LSysDParserBaseVisitor.cpp  LSysDParserBaseVisitor.h  LSysDParserVisitor.cpp  LSysDParserVisitor.h
cmake/: ExternalAntlr4Cpp.cmake  i686-linux-gnu.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/api/: lsystem.rst  nodecontent.rst
examples/: B2.lsd  B3.lsd  Broccoli.lsd  Cantor.lsd  CantorDust.lsd  CantorSet.lsd  Dragon.lsd  DragonCurve.lsd  FractalPlant.lsd  Hilbert.lsd  HilbertCurve.lsd  Koch.lsd  ParametricCantorSet.lsd  Penrose.lsd  PenroseTiling.lsd  Sierpinski.lsd  SierpinskiCarpet.lsd  SierpinskiCarpet1Path.lsd  SierpinskiTriangle.lsd  Star.lsd  Test1.lsd  Test2.lsd  Vicsek.lsd  b2.lsd  brocoli.lsd  cantor-parametric.lsd  cantor.lsd  classics.lsd  dragon.lsd  fplant.lsd  koch.lsd  penrose.lsd  sierpinski.lsd  star.lsd  test1.lsd  test2.lsd  tests.lsd  weeds.lsd  wrong.lsd
lsysweb/: manage.py
lsysweb/editor/: lsys.py  urls.py  views.py
lsysweb/editor/templates/editor/: index.html
lsysweb/lsysweb/: asgi.py  settings.py  urls.py  wsgi.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  Derivator.cpp  Derivator.h  Drawer2D.cpp  Drawer2D.h  ErrorHandler.cpp  ErrorHandler.h  LSysDExpressionEvaluator.cpp  LSysDExpressionEvaluator.h  LSysDVisitor.cpp  LSysDVisitor.h  LSystem.cpp  LSystem.h  Module.cpp  Module.h  NodeContent.cpp  NodeContent.h  ParseTreeNode.cpp  ParseTreeNode.h  Printer.cpp  Printer.h  Rule.cpp  Rule.h  Settings.cpp  Settings.h  Table.cpp  Table.h  TreeNode.cpp  TreeNode.h  cli.cpp  cli.h  cliargs.cpp  cliargs.h  common.h  interpreter2D.cpp  interpreter2D.h  lsys2svg.cpp  lsys2svg.h  lsysgen.cpp  lsysgen.h  (+8 more)
src/backend/: interpreter2D.cpp  interpreter2D.h
src/cli/: cli.cpp  cli.h  cliargs.cpp  cliargs.h
src/common/: ErrorHandler.cpp  ErrorHandler.h  Settings.cpp  Settings.h  common.h  misc.h
src/common/core/: LSystem.cpp  LSystem.h  Module.cpp  NodeContent.h  TreeNode.cpp  TreeNode.h
src/common/runtime/: values.cpp
src/deriving/: Derivator.cpp  Derivator.h  Rule.h  Table.cpp  Table.h
src/frontend/: LSysDExpressionEvaluator.cpp  LSysDExpressionEvaluator.h  LSysDVisitor.cpp  LSysDVisitor.h
src/lib/: lsysgen.cpp  lsysgen.h
